--- a/ppmtool-react-client/src/App.css
+++ b/ppmtool-react-client/src/App.css
@@ -10,6 +10,10 @@ img {
   color: #18a2b9;
 }
 
+.fa.fa-flag-checkered {
+  color: #0846FA;
+}
+
 .list-group-item.delete:hover {
   cursor: -webkit-brab;
   background-color: pink;
